# populatrs

./: .gitignore  .justfile  .vampus.yml  CHANGELOG.md  Cargo.toml  Dockerfile  GIT_FLOW.md  README.md  cliff.toml  config.example.json  docker-compose.yml  run.sh
.github/workflows/: ci.yml  release-prepare.yml  release.yml
docs/: x-oauth-setup.md
src/: main.rs  storage.rs
src/models/: config.rs  feed.rs  mod.rs  post.rs  template.rs  youtube.rs
src/models/publishers/: bluesky.rs  discord.rs  linkedin.py  linkedin.rs  manager.rs  mastodon.rs  matrix.rs  mod.rs  openobserve.rs  telegram.rs  threads.rs  x.rs
