[package]
name = "populatrs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rss = "2.0"
feed-rs = "1.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
tokio-cron-scheduler = "0.9"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
config = "0.14"
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = "0.21"
async-trait = "0.1"
md5 = "0.7"
minijinja = "2.0"
roxmltree = "0.19"
url = "2.4"
regex = "1.0"
hmac = "0.12"
sha1 = "0.10"
