[package]
name = "populatrs"
version = "0.1.5"
edition = "2021"

[dependencies]
tokio = { version = "1.52", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "rustls",
    "form",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rss = "2.0"
feed-rs = "2.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6", features = ["derive"] }
tokio-cron-scheduler = "0.15"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
config = "0.15"
uuid = { version = "1.23", features = ["v4", "serde"] }
base64 = "0.22"
async-trait = "0.1"
md5 = "0.8"
minijinja = "2.19"
roxmltree = "0.21"
url = "2.5"
regex = "1.12"
hmac = "0.13"
sha1 = "0.11"
